--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,6 @@ input::-webkit-inner-spin-button {
   }
 }
 
-
 /* react-toast custom style */
 
 .Toastify__toast {
@@ -107,8 +106,8 @@ input::-webkit-inner-spin-button {
 }
 
 .Toastify__toast--error::before {
-  content: url("/assets/toast/close.svg");
-  padding-left: .5rem;
+  content: url('/assets/toast/close.svg');
+  padding-left: 0.5rem;
   height: 21px;
   width: 2rem;
 }
@@ -123,7 +122,7 @@ input::-webkit-inner-spin-button {
 }
 
 .Toastify__toast--success::before {
-  content: url("/assets/toast/check.svg");
+  content: url('/assets/toast/check.svg');
   height: 27px;
   width: 1.8rem;
 }
@@ -156,10 +155,9 @@ input::-webkit-inner-spin-button {
   display: none;
 }
 
-.Toastify__toast>button>svg {
+.Toastify__toast > button > svg {
   display: none;
 }
-
 
 /* crash style */
 .crash-moving-bg-video {
@@ -202,7 +200,12 @@ input::-webkit-inner-spin-button {
 @keyframes blinkred {
   50% {
     -webkit-text-stroke: 4px rgb(255, 255, 255);
-    text-shadow: rgb(255, 170, 255) 0px 0px 20px, rgb(255, 170, 255) 0px 0px 20px, rgb(255, 170, 255) 0px 0px 20px, rgb(255, 170, 255) 0px 0px 20px, rgb(255, 170, 255) 0px 0px 20px;
+    text-shadow:
+      rgb(255, 170, 255) 0px 0px 20px,
+      rgb(255, 170, 255) 0px 0px 20px,
+      rgb(255, 170, 255) 0px 0px 20px,
+      rgb(255, 170, 255) 0px 0px 20px,
+      rgb(255, 170, 255) 0px 0px 20px;
   }
 }
 
