--- a/src/section/games/coin-flip/coinflip-section.css
+++ b/src/section/games/coin-flip/coinflip-section.css
@@ -6,7 +6,11 @@
 
 @keyframes flipCoin {
     0% {
-        transform: rotateY(0);
+        transform: rotateY(0deg);
+    }
+
+    50% {
+        transform: rotateY(180deg);
     }
 
     100% {
@@ -14,8 +18,21 @@
     }
 }
 
-.coin.flipping {
-    animation: flipCoin 0.6s forwards;
+.coin {
+    perspective: 1000px;
+}
+
+.coin-flip-side {
+    width: 100px;
+    /* Adjust size as needed */
+    height: 100px;
+    /* Adjust size as needed */
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flipping {
+    animation: flip 1.5s infinite;
 }
 
 @keyframes flip {
@@ -24,7 +41,7 @@
     }
 
     50% {
-        transform: rotateY(90deg);
+        transform: rotateY(180deg);
     }
 
     100% {
@@ -39,7 +56,7 @@
     height: 100%;
 }
 
-.coin-flip-side {
+/* .coin-flip-side {
     z-index: 2;
     transform: rotateY(0deg);
 }
@@ -47,3 +64,15 @@
 .side-b {
     transform: rotateY(180deg);
 }
+
+.coin-flip-side img {
+    transition: opacity 0.3s ease-in-out;
+}
+
+.coin-flip-side img.fade-out {
+    opacity: 0;
+}
+
+.coin-flip-side img.fade-in {
+    opacity: 1;
+} */
