--- a/src/section/games/coin-flip/coinflip-section.css
+++ b/src/section/games/coin-flip/coinflip-section.css
@@ -24,29 +24,78 @@
 
 .coin-flip-side {
     width: 100px;
-    /* Adjust size as needed */
     height: 100px;
-    /* Adjust size as needed */
     transition: transform 0.6s;
     transform-style: preserve-3d;
 }
 
 .flipping {
-    animation: flip 1.5s infinite;
+    background-repeat: no-repeat;
+    background-image: url(/assets/games/coin-flip/coin-head.svg);
+    background-position: center;
+    background-size: cover;
+    animation: flip 1s infinite;
+    animation-timing-function: ease-in-out;
+}
+
+.coin-front {
+    background-repeat: no-repeat;
+    background-image: url(/assets/games/coin-flip/coin-head.svg);
+    background-position: center;
+    background-size: cover;
+    animation: flipfront 1s forwards;
+}
+
+.coin-back {
+    background-repeat: no-repeat;
+    background-image: url(/assets/games/coin-flip/coin-tail.svg);
+    background-position: center;
+    background-size: cover;
+    animation: flipback 1s forwards;
 }
 
 @keyframes flip {
     0% {
         transform: rotateY(0deg);
+        background-image: url(/assets/games/coin-flip/coin-head.svg);
     }
 
     50% {
         transform: rotateY(180deg);
+        background-image: url(/assets/games/coin-flip/coin-tail-mirror.svg);
     }
 
     100% {
         transform: rotateY(360deg);
     }
+}
+
+@keyframes flipfront {
+    0% {
+        transform: rotateY(180deg);
+        background-image: url(/assets/games/coin-flip/coin-tail.svg);
+    }
+
+    100% {
+        transform: rotateY(360deg);
+        background-image: url(/assets/games/coin-flip/coin-head.svg);
+    }
+}
+
+@keyframes flipback {
+    0% {
+        transform: rotateY(180deg);
+        background-image: url(/assets/games/coin-flip/coin-head.svg);
+    }
+
+    100% {
+        transform: rotateY(360deg);
+        background-image: url(/assets/games/coin-flip/coin-tail.svg);
+    }
+
+    /* 100% {
+        transform: rotateY(360deg);
+    } */
 }
 
 .coin-flip-side {
