--- a/src/index.css
+++ b/src/index.css
@@ -168,7 +168,7 @@ input::-webkit-inner-spin-button {
   display: none;
 }
 
-.Toastify__toast > button > svg {
+.Toastify__toast>button>svg {
   display: none;
 }
 
@@ -259,5 +259,27 @@ input::-webkit-inner-spin-button {
   100% {
     transform: scale(0.95);
     box-shadow: rgba(84, 214, 44, 0) 0px 0px 0px 0px;
+  }
+}
+
+@keyframes rotate4 {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dash4 {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+
+  50% {
+    stroke-dasharray: 90, 200;
+    stroke-dashoffset: -35px;
+  }
+
+  100% {
+    stroke-dashoffset: -125px;
   }
 }
