--- a/src/index.css
+++ b/src/index.css
@@ -250,6 +250,24 @@ input::-webkit-inner-spin-button {
   animation: dash4 1.5s ease-in-out infinite;
 }
 
+.ripple-animation {
+  animation: animation-box 0.5s ease-in-out infinite;
+}
+
+@keyframes animation-box {
+  0% {
+    transform: scale(0.95);
+  }
+
+  70% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(0.95);
+  }
+}
+
 @keyframes animation-bubble {
   0% {
     transform: scale(0.95);
