--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,7 +22,7 @@ input::-webkit-inner-spin-button {
   border-radius: 10px;
 }
 
-#scrollarea > div {
+#scrollarea>div {
   display: flex !important;
 }
 
@@ -92,6 +90,13 @@ input::-webkit-inner-spin-button {
   }
 }
 
+@font-face {
+  font-family: 'Pricedown';
+  font-style: thin;
+  font-weight: thin;
+  src: url('/fonts/pricedown-bl.ttf');
+}
+
 @layer base {
   * {
     @apply border-border;
@@ -104,7 +109,24 @@ input::-webkit-inner-spin-button {
 
 @layer base {
   html {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  p {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+  }
+
+  button {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+  }
+
+  a {
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
   }
 }
 
@@ -173,7 +195,7 @@ input::-webkit-inner-spin-button {
   display: none;
 }
 
-.Toastify__toast > button > svg {
+.Toastify__toast>button>svg {
   display: none;
 }
 
